"added more projects, fixed project cover image spacing"

--- a/css/style.css
+++ b/css/style.css
@@ -515,8 +515,11 @@ a.active {
 .portfolio_item {
     position: relative;
     overflow: hidden;
-    display: block;
+    display: flex;
     margin-bottom: 30px;
+    height: 330px;
+    /*width: 430px;*/
+    align-items: center;
 }
 
 .portfolio_item .portfolio_item_hover {
@@ -604,8 +607,11 @@ a.active {
 }
 
 .portfolio_item img {
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
+    /*-webkit-filter: grayscale(100%);
+    filter: grayscale(100%); */
+    max-height: 100%;
+    width: 100%;
+    object-fit: contain;
 }
 
 .portfolio-padding {
